--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   get_it: ^7.7.0
   fluttertoast: ^8.2.8
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  either_dart: ^1.0.0
+  internet_connection_checker: ^2.0.0
+  dio: ^5.7.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
