--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,18 +43,11 @@ dependencies:
   either_dart: ^1.0.0
   internet_connection_checker: ^2.0.0
   dio: ^5.7.0
-  freezed_annotation: ^2.4.4
-  json_annotation: ^4.9.0
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
